--- a/arch/arm/boot/dts/msm8926-peregrine-p2d.dts
+++ b/arch/arm/boot/dts/msm8926-peregrine-p2d.dts
@@ -17,15 +17,5 @@
 /include/ "msm8926-peregrine-common.dtsi"
 
 / {
-	qcom,msm-id = <145 0x44 0x82a1>;
-};
-
-&i2c_3 {
-	tpa6165xx@40 {
-		hs_det_micvdd-supply = <&pm8226_l21>;
-	};
-};
-
-&sdhc_2 {
-	status = "disabled";
+	qcom,msm-id = <145 0x44 0x82d0>;
 };
