--- a/arch/arm/configs/msm8226_mmi_defconfig
+++ b/arch/arm/configs/msm8226_mmi_defconfig
@@ -527,7 +527,7 @@ CONFIG_MMI_UNIT_INFO=y
 CONFIG_MMI_SOC_INFO=y
 CONFIG_MMI_DEVICE_DTBS=y
 # CONFIG_MMI_TITAN_DTB is not set
-# CONFIG_MMI_PEREGRINE_DTB is not set
+CONFIG_MMI_PEREGRINE_DTB=y
 CONFIG_MMI_MSM_PINMUX=y
 # CONFIG_PM_DEBUG_WAKEUP is not set
 
